--- a/01_Interfaces/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_Interfaces/FOPS.Blazor/Shared/LeftMenu.razor
@@ -146,7 +146,7 @@
         </a>
         <dl class="layui-nav-child">
             <dd data-name="grid">
-                <NavLink class="nav-link" href="/log/realtime/list" Match="NavLinkMatch.All">
+                <NavLink class="nav-link" href="/log/realtime" Match="NavLinkMatch.All">
                     实时监控
                 </NavLink>
             </dd>
