完成构建日志的语法高亮

--- a/01_Interfaces/FOPS.Blazor/Pages/builder/Log.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/builder/Log.razor
@@ -218,6 +218,7 @@
         "执行失败，提前退出。",
         "K8S更新镜像失败。",
         "Unable to connect",
+        "Cannot connect",
     };
 
     private MarkupString SyntaxHighlighting(string content)
