修改日志显示格式

--- a/01_Interfaces/FOPS.Blazor/Pages/builder/Log.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/builder/Log.razor
@@ -215,6 +215,7 @@
         "ERROR:",
         "error ",
         "镜像打包出错了。",
+        "镜像仓库登陆失败。",
         "执行失败，提前退出。",
         "K8S更新镜像失败。",
         "Unable to connect",
